# MCSkripters

./: CMakeLists.txt  LICENSE  README.md
examples/: test.lua
src/: Main.cpp
src/hooks/: Hooks.cpp  Hooks.h  WglSwapBuffers.cpp
src/lua/: Script.cpp  Script.h
src/mc/: Java.cpp  Java.h
src/utils/: InputSystem.cpp  InputSystem.h
src/utils/render/: Menu.cpp  Menu.h  Renderer.cpp  Renderer.h
